--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,12 @@
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 		</dependency>
-   </dependencies>
+		<dependency>
+			<groupId>org.zalando</groupId>
+			<artifactId>logbook-spring-boot-starter</artifactId>
+			<version>3.7.2</version>
+		</dependency>
+	</dependencies>
 
    <build>
        <plugins>
